My second commit

--- a/index.html
+++ b/index.html
@@ -1,11 +1,183 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Music Player</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Istok+Web&family=Karla&family=Kenia&family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="main1_header">
+        <div class="container">
+            <div class="container_navigation">
+                <a class="logo" href="#">
+                    <img src="images/logotip.svg" alt="Логотип" width="53" height="80">
+                </a>
+                <nav class="navigation">
+                    <ul class="list_navigation">
+                        <li class="list_1">
+                            <a class="navigation_link1" href="#">HOME</a>
+                        </li>
+                        <li class="list_1">
+                            <a class="navigation_link2" href="#">MUSIC</a>
+                        </li>
+                        <li class="list_1">
+                            <a class="navigation_link3" href="#">ABOUT</a>
+                        </li>
+                        <li class="list_1">
+                            <a class="navigation_link4" href="#">STORE</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="container_text_and_phone">
+                <div class="container_text">
+                    <div class="container_text_title">
+                        <h1 class="header_title1">MUSIC</h1>
+                        <h1 class="header_title2">PLAYER</h1>
+                    </div>
+                    <p class="text_1">American company formed in</p>
+                    <p class="text_2">2002 in Boston, Massachusetts</p>
+                </div>
+                <div class="container_kabel">
+                    <a href="#">
+                        <img src="images/kabel.png" alt="Кабель">
+                    </a>
+                </div>
+                <div class="container_phone">
+                    <a href="#">
+                        <img src="images/Flat.png" alt="Плеер">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="main_header">
+            <div class="music_text">
+                <h4 class="music_text_1">Music</h4>
+            </div>
+            <div class="list_music_text">
+                <ul class="button_two">
+                    <li class="button_11">
+                        <a class="music_text_button1" href="#">Listen now</a>
+                    </li>
+                    <li class="button_1">
+                        <a class="music_text_button2" href="#">Find a song...</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="music_image">
+                <img src="images/The act.png" alt="альбом" class="music_image_1">
+            </div>
+        </div>
+        <div class="main_main">
+            <div class="about_text">
+                <h4 class="about_text_1">ABOUT</h4>
+            </div>
+            <div class="about_text_all">
+                <p class="about_text_21">MusicPlayer gives you instant access to millions of songs – from old</p>
+                <p class="about_text_22">favorites to the latest hits. Just hit play to stream anything you like.</p>
+            </div>
+        </div>
+        <div class="main_footer">
+            <div class="store_text">
+                <h4 class="store_text_1">STORE</h4>
+            </div>
+            <div class="store_text_list">
+                <ul class="list_store">
+                    <li class="list_store_1">
+                        <a class="button_store1" href="#">
+                            <p class="button_store1p">Download</p>
+                            <p class="button_store1pp">Windows x64</p>
+                        </a>
+                    </li>
+                    <li class="list_store_2">
+                        <a class="button_store2" href="#">
+                            <p class="button_store1p">Download</p>
+                            <p class="button_store1pp">MacOS</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="store_text_two">
+                <p class="h4_store">Нужна предыдущая версия MPlayer?</p>
+                <div class="h5_store">
+                    <p class="h5_store1">Вы можете скачать одну из предыдущих</p>
+                    <p class="h5_store2">версий MPlayer, которая совместима с</p>
+                    <p class="h5_store3">нужной вам версией операционной системы</p>
+                    <p class="h5_store4">и определёнными устройствами.</p>
+                </div>
+                <p class="h6_store">
+                    <a href="#" class="a_store">Выберите предыдущую версию MPlayer</a>
+                </p>
+            </div>
+            <div class="image_store">
+                <img src="images/Macbook.png" alt="Macbook">
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="list_footer">
+            <h3 class="h3_footer">MPlayer Store</h3>
+            <ul class="footer_two">
+                <li class="footer_1">
+                    <a class="footer_text_1" href="#">Варианты оплаты</a>
+                </li>
+                <li class="footer_2">
+                    <a class="footer_text_2" href="#">Состояние заказа</a>
+                </li>
+                <li class="footer_3">
+                    <a class="footer_text_3" href="#">Помощь при покупке</a>
+                </li>
+            </ul>
+        </div>
+        <div class="list_footer_2">
+            <h3 class="h3_footer2">Ценности MPlayer</h3>
+            <ul class="footer_two2">
+                <li class="footer_12">
+                    <a class="footer_text_12" href="#">Универсальный доступ</a>
+                </li>
+                <li class="footer_22">
+                    <a class="footer_text_22" href="#">Окружающая среда</a>
+                </li>
+                <li class="footer_32">
+                    <a class="footer_text_32" href="#">Конфиденциальность</a>
+                </li>
+            </ul>
+        </div>
+        <div class="list_footer_23">
+            <h3 class="h3_footer23">Учётная запись</h3>
+            <ul class="footer_two23">
+                <li class="footer_123">
+                    <a class="footer_text_123" href="#">Управление вашими MPlayer ID</a>
+                </li>
+                <li class="footer_223">
+                    <a class="footer_text_223" href="#">Учётная запись MPlayer Store</a>
+                </li>
+            </ul>
+        </div>
+        <div class="text_mp">
+            <h3 class="h1_text_mp">MUSIC PLAYER</h3>
+        </div>
+        <div class="list_mp">
+            <ul class="list_navigation_mp">
+                <li class="list_1mp">
+                    <a class="navigation_link_mp" href="#">© MPlayer Inc., 2022 г. Все права защищены.</a>
+                </li>
+                <li class="list_1mp">
+                    <a class="navigation_link_mp" href="#">Условия использования</a>
+                </li>
+                <li class="list_1mp">
+                    <a class="navigation_link_mp" href="#">Продажа и возврат</a>
+                </li>
+                <li class="list_1mp">
+                    <a class="navigation_link_mp" href="#">Юридическая информация</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
