The project is finished

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="main_main">
             <div class="about_text">
-                <h4 class="about_text_1">ABOUT</h4>
+                <h4 class="about_text_1">About</h4>
             </div>
             <div class="about_text_all">
                 <p class="about_text_21">MusicPlayer gives you instant access to millions of songs – from old</p>
@@ -85,7 +85,7 @@
         </div>
         <div class="main_footer">
             <div class="store_text">
-                <h4 class="store_text_1">STORE</h4>
+                <h4 class="store_text_1">Store</h4>
             </div>
             <div class="store_text_list">
                 <ul class="list_store">
@@ -120,61 +120,69 @@
         </div>
     </main>
     <footer>
-        <div class="list_footer">
-            <h3 class="h3_footer">MPlayer Store</h3>
-            <ul class="footer_two">
-                <li class="footer_1">
-                    <a class="footer_text_1" href="#">Варианты оплаты</a>
-                </li>
-                <li class="footer_2">
-                    <a class="footer_text_2" href="#">Состояние заказа</a>
-                </li>
-                <li class="footer_3">
-                    <a class="footer_text_3" href="#">Помощь при покупке</a>
-                </li>
-            </ul>
-        </div>
-        <div class="list_footer_2">
-            <h3 class="h3_footer2">Ценности MPlayer</h3>
-            <ul class="footer_two2">
-                <li class="footer_12">
-                    <a class="footer_text_12" href="#">Универсальный доступ</a>
-                </li>
-                <li class="footer_22">
-                    <a class="footer_text_22" href="#">Окружающая среда</a>
-                </li>
-                <li class="footer_32">
-                    <a class="footer_text_32" href="#">Конфиденциальность</a>
-                </li>
-            </ul>
-        </div>
-        <div class="list_footer_23">
-            <h3 class="h3_footer23">Учётная запись</h3>
-            <ul class="footer_two23">
-                <li class="footer_123">
-                    <a class="footer_text_123" href="#">Управление вашими MPlayer ID</a>
-                </li>
-                <li class="footer_223">
-                    <a class="footer_text_223" href="#">Учётная запись MPlayer Store</a>
-                </li>
-            </ul>
-        </div>
+        <ul class="new_ul">
+            <li class="new_ul1">
+                <div class="list_footer">
+                    <h3 class="h3_footer">MPlayer Store</h3>
+                    <ul class="footer_two">
+                        <li class="footer_1">
+                            <a class="footer_text_1" href="#">Варианты оплаты</a>
+                        </li>
+                        <li class="footer_2">
+                            <a class="footer_text_2" href="#">Состояние заказа</a>
+                        </li>
+                        <li class="footer_3">
+                            <a class="footer_text_3" href="#">Помощь при покупке</a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li class="new_ul2">
+                <div class="list_footer_2">
+                    <h3 class="h3_footer2">Ценности MPlayer</h3>
+                    <ul class="footer_two2">
+                        <li class="footer_12">
+                            <a class="footer_text_12" href="#">Универсальный доступ</a>
+                        </li>
+                        <li class="footer_22">
+                            <a class="footer_text_22" href="#">Окружающая среда</a>
+                        </li>
+                        <li class="footer_32">
+                            <a class="footer_text_32" href="#">Конфиденциальность</a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li class="new_ul3">
+                <div class="list_footer_23">
+                    <h3 class="h3_footer23">Учётная запись</h3>
+                    <ul class="footer_two23">
+                        <li class="footer_123">
+                            <a class="footer_text_123" href="#">Управление вашими MPlayer ID</a>
+                        </li>
+                        <li class="footer_223">
+                            <a class="footer_text_223" href="#">Учётная запись MPlayer Store</a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+        </ul>
         <div class="text_mp">
             <h3 class="h1_text_mp">MUSIC PLAYER</h3>
         </div>
         <div class="list_mp">
             <ul class="list_navigation_mp">
                 <li class="list_1mp">
-                    <a class="navigation_link_mp" href="#">© MPlayer Inc., 2022 г. Все права защищены.</a>
+                    <a class="navigation_link_mp1" href="#">© MPlayer Inc., 2022 г. Все права защищены.</a>
                 </li>
                 <li class="list_1mp">
-                    <a class="navigation_link_mp" href="#">Условия использования</a>
+                    <a class="navigation_link_mp2" href="#">Условия использования</a>
                 </li>
                 <li class="list_1mp">
-                    <a class="navigation_link_mp" href="#">Продажа и возврат</a>
+                    <a class="navigation_link_mp3" href="#">Продажа и возврат</a>
                 </li>
                 <li class="list_1mp">
-                    <a class="navigation_link_mp" href="#">Юридическая информация</a>
+                    <a class="navigation_link_mp4" href="#">Юридическая информация</a>
                 </li>
             </ul>
         </div>
