--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </ul>
             </div>
             <div class="music_image">
-                <img src="images/The act.png" alt="альбом" class="music_image_1">
+                <img src="images/The_act.png" alt="альбом" class="music_image_1">
             </div>
         </div>
         <div class="main_main">
@@ -99,6 +99,7 @@
                         <a class="button_store2" href="#">
                             <p class="button_store1p">Download</p>
                             <p class="button_store1pp">MacOS</p>
+                        </a>
                     </li>
                 </ul>
             </div>
